[metadata]
name = ml_management_common
version = 0.0.1
author = Samuel Foster
author_email = sam.foster@icrar.org
description = "Machine learning management wrapper to connect to different machine learning platforms"
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src